--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require": {
         "spatie/array-to-xml": "2.8.*|3.*.*",
-        "illuminate/support": "5.4.*|5.5.*|5.6.*|5.7.*|5.8.*|6.*.*|7.*.*|8.*.*|9.*.*"
+        "illuminate/support": "5.4.*|5.5.*|5.6.*|5.7.*|5.8.*|6.*.*|7.*.*|8.*.*|9.*.*|10.*.*"
     },
     "prefer-stable": true
 }
